--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,8 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import 'bootstrap/scss/functions';
 
-@import './base/base.scss';
 
-@import './pages/index.scss';
+@import 'variables';
+@import 'variables-dark';
+
+
+@import 'bootstrap/scss/bootstrap';
